BE/error/src/main/java/com/example/demo/auth/application/support/AuthConstants.java
package com.example.demo.auth.application.support;

public class AuthConstants {
    public static final String TOKEN_KEY = "error_token";
}